# mpc_local_planner

./: CMakeLists.txt  README.MD  mpc_local_planner_plugin.xml  package.xml
include/mpc_local_planner/: mpc_local_planner.hpp
src/: mpc_local_planner.cpp
